--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -1,4 +1,4 @@
-$white: hsl(0, 0%, 100%)
-$light-gray: hsl(212, 45%, 89%)
-$Grayish-blue: hsl(220, 15%, 55%)
-$dark-blue: hsl(218, 44%, 22%)
+$white: hsl(0, 0%, 100%);
+$light-gray: hsl(212, 45%, 89%);
+$Grayish-blue: hsl(220, 15%, 55%);
+$dark-blue: hsl(218, 44%, 22%);
